Roll ICU to 1fec0c8 and add 4 languages to A-L list.

This will increase the ICU data size by ~21 kB (desktop) and ~18 kB (Android
and iOS).

1fec0c8: Add Spanish, Arabic and English variants for better locale
         coverage in v8's Intl API support.
01ab158: Add the display names of 4 languages for Translate UI.

 http://chromium.googlesource.com/chromium/deps/icu.git/+log/b971435..1fec0c8

BUG=chromium:733398,chromium:732762
TEST=See the bug
TBR=littledan@chromium.org,yyushkina@chromium.org

Change-Id: Ib45942a069511b359495e73ad611b99d381a1e8f
Reviewed-on: https://chromium-review.googlesource.com/576383
Commit-Queue: Jungshik Shin <jshin@chromium.org>
Reviewed-by: Jungshik Shin <jshin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#487657}