ui/base/l10n/l10n_util.cc
@@ -118,6 +118,7 @@ static const char* const kAcceptLanguageList[] = {
     "haw",     // Hawaiian
     "he",      // Hebrew
     "hi",      // Hindi
+    "hmn",     // Hmong
     "hr",      // Croatian
     "hu",      // Hungarian
     "hy",      // Armenian
@@ -128,7 +129,7 @@ static const char* const kAcceptLanguageList[] = {
     "it-CH",   // Italian (Switzerland)
     "it-IT",   // Italian (Italy)
     "ja",      // Japanese
-    "jw",      // Javanese
+    "jv",      // Javanese
     "ka",      // Georgian
     "kk",      // Kazakh
     "km",      // Cambodian
@@ -137,6 +138,7 @@ static const char* const kAcceptLanguageList[] = {
     "ku",      // Kurdish
     "ky",      // Kyrgyz
     "la",      // Latin
+    "lb",      // Luxembourgish
     "ln",      // Lingala
     "lo",      // Laothian
     "lt",      // Lithuanian
@@ -171,6 +173,7 @@ static const char* const kAcceptLanguageList[] = {
     "si",      // Sinhalese
     "sk",      // Slovak
     "sl",      // Slovenian
+    "sm",      // Samoan
     "sn",      // Shona
     "so",      // Somali
     "sq",      // Albanian
