chrome/browser/chromeos/locale_change_guard_unittest.cc
@@ -54,6 +54,7 @@ const char* const kShowNotificationLanguages[] = {
     "haw",  // Hawaiian
     "he",   // Hebrew
     "hi",   // Hindi
+    "hmn",  // Hmong
     "hr",   // Croatian
     "hu",   // Hungarian
     "hy",   // Armenian
@@ -61,7 +62,7 @@ const char* const kShowNotificationLanguages[] = {
     "id",   // Indonesian
     "is",   // Icelandic
     "ja",   // Japanese
-    "jw",   // Javanese
+    "jv",   // Javanese
     "ka",   // Georgian
     "kk",   // Kazakh
     "km",   // Cambodian
@@ -70,6 +71,7 @@ const char* const kShowNotificationLanguages[] = {
     "ku",   // Kurdish
     "ky",   // Kyrgyz
     "la",   // Latin
+    "lb",   // Luxembourgish
     "ln",   // Lingala
     "lo",   // Laothian
     "lt",   // Lithuanian
@@ -102,6 +104,7 @@ const char* const kShowNotificationLanguages[] = {
     "si",   // Sinhalese
     "sk",   // Slovak
     "sl",   // Slovenian
+    "sm",   // Samoan
     "sn",   // Shona
     "so",   // Somali
     "sq",   // Albanian
